--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -9,6 +9,7 @@ body {
   min-width: 87.5rem;
   font-family: "Pretendard Variable", sans-serif;
   background-color: #ffffff;
+  color: #444444;
   margin: 0;
   overflow-x: auto;
 }
@@ -87,7 +88,7 @@ body {
   top: 0.625rem;
   width: 100%;
   background: #ffffff;
-  border: 1px solid #222222;
+  border: 1px solid #444444;
   border-radius: 0.25rem;
   text-align: center;
   overflow: hidden;
@@ -128,13 +129,13 @@ body {
   align-items: center;
   padding: 0.5rem 0;
   text-decoration: none;
-  color: #222222;
+  color: #444444;
 }
 .floating-menu .menu-content .menu-item .label {
   font-family: "Pretendard Variable", sans-serif;
   font-size: 0.8125rem;
   font-weight: 500;
-  color: #222222;
+  color: #444444;
   margin-bottom: 0;
   letter-spacing: -0.5px;
 }
@@ -144,12 +145,16 @@ body {
   font-weight: 700;
   color: #1f95ff;
 }
+.floating-menu .menu-content .my-coupon {
+  background: #ffffe0;
+}
 .floating-menu .btn-top {
   width: 100%;
   padding: 0.75rem 0;
   border: none;
   border-top: 1px solid #eeeeee;
   background: #ffffff;
+  color: #444444;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -159,9 +164,63 @@ body {
 .floating-menu .btn-top span {
   font-size: 0.8125rem;
   font-weight: 700;
-  color: #222222;
+  color: #444444;
   margin-top: -0.125rem;
   font-family: "Roboto", sans-serif;
+}
+
+.qty-box {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #444444;
+  border-radius: 0.25rem;
+  overflow: hidden;
+}
+.qty-box button {
+  background: none;
+  border: none;
+  padding: 0;
+  width: 3rem;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.qty-box button img {
+  width: 1.125rem;
+  height: 1.125rem;
+}
+.qty-box button {
+  transition: background-color 0.2s ease;
+}
+.qty-box button:hover {
+  background-color: #eeeeee;
+  border-color: #999999;
+}
+.qty-box input {
+  flex: 0.8;
+  width: 60%;
+  border: none;
+  background: transparent;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #444444;
+  outline: none;
+  padding: 0;
+  height: 90%;
+  border-radius: 0.25rem;
+  -moz-appearance: textfield;
+}
+.qty-box input::-webkit-outer-spin-button, .qty-box input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.qty-box input:focus {
+  outline: 2px solid #444444;
 }
 
 .badge-order-red {
@@ -248,20 +307,25 @@ body {
   max-width: 85%;
 }
 .slider-card .slider-card-body .slider-title {
-  font-size: 1.375rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.3;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   color: #ffffff;
+  letter-spacing: -1;
   margin: 0;
 }
 .slider-card .slider-card-body .slider-desc {
-  font-size: 0.9375rem;
+  font-size: 1rem;
   opacity: 0.9;
   font-weight: 400;
   margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  letter-spacing: -1;
   line-height: 1.4;
 }
 .slider-card .slider-card-body .slider-arrow {
@@ -325,7 +389,7 @@ body {
   gap: 0.25rem;
   font-size: 0.875rem;
   font-weight: 700;
-  color: #333;
+  color: #444444;
 }
 .product-card .card-thumb .badge-corner svg {
   position: relative;
@@ -349,7 +413,7 @@ body {
   border-radius: 0.125rem;
   display: flex;
   align-items: center;
-  background-color: #FFFFE0;
+  background-color: #ffffe0;
 }
 .product-card .card-thumb .delivery-tags .tag svg {
   width: 1rem;
@@ -363,16 +427,15 @@ body {
   color: #ff5447;
 }
 .product-card .card-thumb .delivery-tags .tag-outline {
-  background-color: #FFFFE0 !important;
+  background-color: #ffffe0 !important;
   border: none;
-  color: #222 !important;
+  color: #222222 !important;
 }
 .product-card .card-thumb .delivery-tags .tag-outline:before {
   display: none !important;
 }
 .product-card .card-thumb .delivery-tags .tag-green {
-  color: #00C853;
-  color: #00B87A;
+  color: #00b87a;
 }
 .product-card .card-info {
   padding: 0;
@@ -389,7 +452,7 @@ body {
   font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
   font-size: 1.25rem;
   font-weight: 600;
-  color: #333333;
+  color: #444444;
   margin-bottom: 0.25rem;
   line-height: 1.5;
   letter-spacing: -0.0625rem;
@@ -401,7 +464,7 @@ body {
 }
 .product-card .card-info .unit-info {
   font-size: 0.875rem;
-  color: #333;
+  color: #444444;
   margin-bottom: 0.125rem;
   display: flex;
   align-items: center;
@@ -409,7 +472,7 @@ body {
 }
 .product-card .card-info .unit-info .strike {
   text-decoration: line-through;
-  color: #999;
+  color: #999999;
   font-size: 0.875rem;
   font-weight: 600;
 }
@@ -417,7 +480,7 @@ body {
   font-weight: 700;
 }
 .product-card .card-info .unit-info .unit-desc {
-  color: #333;
+  color: #444444;
   font-size: 0.875rem;
   font-weight: 600;
 }
@@ -427,7 +490,7 @@ body {
   gap: 0.375rem;
   font-size: 1.5rem;
   font-weight: 800;
-  color: #333333;
+  color: #444444;
 }
 .product-card .card-info .total-price-area .discount {
   color: #FF531D;
@@ -447,41 +510,6 @@ body {
   margin-bottom: 0.75rem;
   margin-top: auto;
 }
-.product-card .card-control .qty-box {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid #222222;
-  border-radius: 0.25rem;
-  overflow: hidden;
-}
-.product-card .card-control .qty-box button {
-  background: none;
-  border: none;
-  padding: 0;
-  width: 3rem;
-  height: 3rem;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.product-card .card-control .qty-box button img {
-  width: 1.125rem;
-  height: 1.125rem;
-}
-.product-card .card-control .qty-box button {
-  transition: background-color 0.2s ease;
-}
-.product-card .card-control .qty-box button:hover {
-  background-color: #eeeeee;
-  border-color: #999999;
-}
-.product-card .card-control .qty-box span {
-  font-size: 1rem;
-  font-weight: 600;
-}
 .product-card .card-control .btn-icon {
   width: 3rem;
   height: 3rem;
@@ -500,7 +528,7 @@ body {
 }
 .product-card .bottom-info {
   font-size: 0.6875rem;
-  color: #888;
+  color: #888888;
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -512,7 +540,7 @@ body {
   align-items: center;
   gap: 0.25rem;
   font-size: 0.875rem;
-  color: #aaa;
+  color: #aaaaaa;
   font-weight: 500;
 }
 .product-card .bottom-info .info-row .icon-tag {
@@ -589,7 +617,7 @@ body {
   background-color: #f4f4f4;
   border-radius: 0.5rem;
   overflow: hidden;
-  border: 1px solid #eee;
+  border: 1px solid #eeeeee;
 }
 .brand-card .card-img img {
   width: 100%;
@@ -674,7 +702,7 @@ body {
   font-family: "Pretendard", sans-serif;
   font-weight: 600;
   font-size: 1rem;
-  color: #222;
+  color: #222222;
   opacity: 0.3;
   color: #999999;
 }
@@ -704,5 +732,3 @@ body {
 .footer {
   padding: 1.25rem;
 }
-
-/*# sourceMappingURL=mobile.css.map */
